bdr.BDR.scala.code
while (estSurMessage())
{if (litMessage() == "A") {
  avance();
} else if { (litMessage() == "Z")
           recule();} else if  {(litMessage() == "B") 
                                avance(3);}}
      
